// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Step Chaining via stepOutput > should chain planner output to writer input > step-chaining-planner-to-writer 1`] = `
[
  {
    "content": "You write vivid, concise third-person prose. Keep continuity and respect constraints.",
    "role": "system",
  },
  {
    "content": "Player intent to respect: Continue the conversation between Alice and Bob while Charlie observes from the shadows
Planner guidance follows.
{"goals":["Develop character tension","Advance the mystery"],"beats":["Alice discovers a clue","Bob expresses doubt","Unexpected revelation"],"risks":["Moving too fast","Breaking character consistency"]}
[6] Bob: Bob closed his book carefully and stood up, brushing dust from his robes.
[5] Alice: "I wasn't expecting to find anyone else here," Alice said, her voice echoing softly in the courtyard.
[4] Charlie: Charlie emerged from behind the pillar, a mysterious smile playing on their lips.
[3] Narrator: A gentle breeze carried the scent of jasmine through the air, creating an almost magical atmosphere.
[2] Bob: Bob looked up from his book, startled by the sound of footsteps on the cobblestones.
[1] Alice: The morning sun cast long shadows across the courtyard as Alice approached the ancient fountain.
Write the next turn as prose. 200–350 words. No meta commentary.",
    "role": "user",
  },
]
`;

exports[`Step Chaining via stepOutput > should work with pre-configured step chained context > step-chaining-preconfigured 1`] = `
[
  {
    "content": "You write vivid, concise third-person prose. Keep continuity and respect constraints.",
    "role": "system",
  },
  {
    "content": "Player intent to respect: Execute a multi-step workflow with planner -> writer chaining
Planner guidance follows.
{"goals":["Create dramatic tension","Reveal character motivation"],"beats":["Alice confronts her fear","Bob offers support","An unexpected revelation"],"risks":["Moving too fast","Losing emotional impact"]}
[3] Narrator: A gentle breeze carried the scent of jasmine through the air, creating an almost magical atmosphere.
[2] Bob: Bob looked up from his book, startled by the sound of footsteps on the cobblestones.
[1] Alice: The morning sun cast long shadows across the courtyard as Alice approached the ancient fountain.
Write the next turn as prose. 200–350 words. No meta commentary.",
    "role": "user",
  },
]
`;
